--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "firebase": "^5.0.3",
     "moment": "^2.22.1",
+    "npm": "^6.0.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuetify": "^1.0.0",
